minikube/webtest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webtest
spec:
  replicas: 3
  selector:
    matchLabels:
      webtest: webtest
  template:
    metadata:
      labels:
        webtest: webtest
    spec:
      containers:
      - name: webtest
        image: yeasy/simple-web
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webtest
spec:
  type: LoadBalancer
  selector:
    webtest: webtest
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webtest
  labels:
    webtest: webtest
spec:
  rules:
  - host: findip.nif.catchmedia.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webtest
            port: 
              number: 80
